Begin refactoring calendar stuff into CalendarOps class...

--- a/Outliner.csproj
+++ b/Outliner.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalendarOps.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
